force-app/main/default/objects/BoredActivity__c/BoredActivity__c.object-meta.xml
<CustomObject>
    <label>BoredActivity</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>BoredActivity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BoredActivitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>