force-app/main/default/objects/BoredActivity__c/fields/Accessibilty__c.field-meta.xml
<CustomField>
    <fullName>Accessibilty__c</fullName>
    <label>Accessibilty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>